--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,68 +1,74 @@
 [options]
-# Font switcher
 
+# Font switcher ##########################
 # font = FuraMonoForPowerline Nerd Font 10
-font = Monaco for Powerline 10
+	font = Monaco for Powerline 10
 # font = Ubuntu Mono derivative Powerline 13
 # font = Roboto Mono for Powerline 10
 # font = Hack 10
 # font = Anonymice Powerline 12
 # font = Sauce Code Powerline 10
-scroll_on_keystroke = true
-audible_bell = false
-mouse_autohide = true
-allow_bold = true
-dynamic_title = true
-urgent_on_bell = true
-clickable_url = true
-scrollback_lines = 10000
-search_wrap = true
-icon_name = terminal
-geometry = 800x400
+
+	scroll_on_output = false
+	scroll_on_keystroke = true
+	audible_bell = false
+	visible_bell = true
+	mouse_autohide = true
+	allow_bold = true
+	dynamic_title = true
+	urgent_on_bell = true
+	clickable_url = true
+	scrollback_lines = 10000
+	search_wrap = true
+# icon_name = terminal
+# geometry = 800x400
 
 # "system", "on" or "off"
-cursor_blink = system
+	cursor_blink = system
 
 # "block", "underline" or "ibeam"
-cursor_shape = block
+	cursor_shape = block
+
+# Browser by default
+	browser = chromium
 
 [colors]
 # background = #1d2021
-background = #282828
+	background = #282828
 # background = #32302f
-foreground = #ebdbb2
-foreground_bold = #ebdbb2
+	foreground = #ebdbb2
+	foreground_bold = #ebdbb2
 
 # dark0 + gray
-color0 = #282828
-color8 = #928374
+	color0 = #282828
+	color8 = #928374
 
 # neutral_red + bright_red
-color1 = #cc241d
-color9 = #fb4934
+	color1 = #cc241d
+	color9 = #fb4934
 
 # neutral_green + bright_green
-color2 = #98971a
-color10 = #b8bb26
+	color2 = #98971a
+	color10 = #b8bb26
 
 # neutral_yellow + bright_yellow
-color3 = #d79921
-color11 = #fabd2f
+	color3 = #d79921
+	color11 = #fabd2f
 
 # neutral_blue + bright_blue
-color4 = #458588
-color12 = #83a598
+	color4 = #458588
+	color12 = #83a598
 
 # neutral_purple + bright_purple
-color5 = #b16286
-color13 = #d3869b
+	color5 = #b16286
+	color13 = #d3869b
 
 # neutral_aqua + faded_aqua
-color6 = #689d6a
-color14 = #8ec07c
+	color6 = #689d6a
+	color14 = #8ec07c
 
 # light4 + light1
-color7 = #a89984
-color15 = #ebdbb2
+	color7 = #a89984
+	color15 = #ebdbb2
 
 # vim: ft=dosini cms=#%s
