--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -56,14 +56,14 @@ interval=60
 #Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory]
-label=[memory]
-separator=true
-interval=1
+# [memory]
+# label=[memory]
+# separator=true
+# interval=1
 
-[cpu]
-label=[cpu]
-interval=4
+# [cpu]
+# label=[cpu]
+# interval=4
 
 # Disk usage
 #
@@ -93,8 +93,8 @@ interval=1
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=[vol]
-#label=♪
+# label=[vol]
+label=♪
 instance=Master
 #instance=PCM
 interval=1
