--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,27 +2,10 @@
   set $mod Mod4
 
 # Window border multiplier.
-  set $borders    2
+  set $borders    1
 
 # Number of pixels to resize by in resize mode.
   set $resize     2
-
-  #set $base00 #101218
-  #set $base01 #1f222d
-  #set $base02 #252936
-  #set $base03 #7780a1
-  #set $base04 #C0C5CE
-  #set $base05 #d1d4e0
-  #set $base06 #C9CCDB
-  #set $base07 #ffffff
-  #set $base08 #ee829f
-  #set $base09 #f99170
-  #set $base0A #ffefcc
-  #set $base0B #a5ffe1
-  #set $base0C #97e0ff
-  #set $base0D #97bbf7
-  #set $base0E #c0b7f9
-  #set $base0F #fcc09e
 
   set $workspace1 "一"
   set $workspace2 "二"
@@ -35,8 +18,6 @@
   set $workspace9 "九"
   set $workspace10 "十"
 
-  #set $monitor1 "DVI-I-2"
-  #set $monitor2 "DVI-I-3"
 
 # General Configuration
   font pango:Monaco 10
@@ -44,8 +25,8 @@
   #hide_edge_borders both
   #new_window none
   #smart_borders on
-  gaps inner 30
-  gaps outer 15
+  gaps inner 70
+  gaps outer 0
   new_float	pixel 	4
   new_window    pixel 	4
 
@@ -82,7 +63,7 @@
   bindsym $mod+space 	  exec termite
   bindsym $mod+g          exec chromium
 
-  bindsym $mod+r exec rofi -show run -lines 3 -eh 2 -width 100 -padding 300  -opacity "100" -bw 0 -bc "#80CBC4" -bg "#2a2337" -fg "$text-color" -hlbg "#80CBC4" -hlfg "#2a2337" -font "Noto Sans 18"
+  bindsym $mod+r exec rofi -show run -lines 3 -eh 2 -width 100 -padding 300  -opacity "100" -bw 0 -bc "#80CBC4" -bg "#2a2337" -fg "$text-color" -hlbg "#80CBC4" -hlfg "#2a2337" -font "Monaco 20"
   bindsym --release Print exec imgur-screenshot
   bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -139,9 +120,9 @@
 
 # Window colours:
 
-   client.focused              		#12fee7 #12fee7 #ebdbb2 #12fee7
-   client.focused_inactive     	#C2CBFF #C2CBFF #ebdbb2 #C2CBFF
-   client.unfocused            		#C2CBFF #C2CBFF #ebdbb2 #C2CBFF
+   client.focused              		#8ec07c #8ec07c #ebdbb2 #12fee7
+   client.focused_inactive     	#928374 #928374 #ebdbb2 #C2CBFF
+   client.unfocused            		#928374 #928374 #ebdbb2 #C2CBFF
    client.urgent               		#F97EC6 #F97EC6 #ee0000 #F97EC6
 
 
@@ -149,22 +130,23 @@
   bar {
     strip_workspace_numbers no
     position top
-    height 25
-    status_command i3blocks -c ~/.config/i3/i3blocks.conf
+    height 40
+    status_command lemonbar
+    # status_command i3blocks -c ~/.config/i3/i3blocks.conf
     separator_symbol "|"
     tray_output none
     font pango:Monaco 8
 
 
   colors {
-    background #21222c
-    statusline #C2CBFF
+    background #282828
+    statusline #ebdbb2
     separator #ffffff
     						#border  	background 	text
-    focused_workspace 	#F97EC6	#221d3b 		#ffffff
-    active_workspace 		#F97EC6 	#221d3b 		#ffffff
-    inactive_workspace 	#221d3b 	#221d3b 		#ffffff
-    urgent_workspace 	#bf616a 	#F97EC6 		#ffffff
+    focused_workspace 	#8ec07c	#3c3836 		#ebdbb2
+    active_workspace 		#928374 	#3c3836 		#ebdbb2
+    inactive_workspace 	#282828 	#282828 		#febdbb2
+    urgent_workspace 	#bf616a 	#F97EC6 		#febdbb2
     }
    }
 
