--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,3 +86,7 @@ set-window-option -g window-status-bell-style "fg=red"
 set-window-option -g window-status-activity-style "fg=red"
 set-window-option -g window-status-format '#{=15:window_name}'
 set-window-option -g window-status-current-format '#W'
+
+set -g pane-border-fg magenta
+set -g pane-active-border-fg green
+set -g pane-active-border-bg default
