--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-####################################
-# Binds #
-####################################
+# ========================================
+#	Binds
+# ========================================
 
 set-option -g prefix M-a
 unbind-key C-b
@@ -48,9 +48,9 @@ bind + clock-mode
 bind r source-file ~/.tmux.conf
 
 
-####################################
-# Misc #
-#################################### 
+# ========================================
+#	Misc
+# ========================================
 
 set -g mouse on
 set -g history-limit 30000
@@ -65,9 +65,10 @@ set -g renumber-windows on
 # No delay on escape press
 set -sg escape-time 0
 
-####################################
-# Visuals #
-#################################### 
+
+# ========================================
+#	Visuals
+# ========================================
 
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
@@ -87,6 +88,6 @@ set-window-option -g window-status-activity-style "fg=red"
 set-window-option -g window-status-format '#{=15:window_name}'
 set-window-option -g window-status-current-format '#W'
 
-set -g pane-border-fg magenta
-set -g pane-active-border-fg green
+set -g pane-border-fg grey
+set -g pane-active-border-fg grey
 set -g pane-active-border-bg default
