--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,6 +88,6 @@ set-window-option -g window-status-activity-style "fg=red"
 set-window-option -g window-status-format '#{=15:window_name}'
 set-window-option -g window-status-current-format '#W'
 
-set -g pane-border-fg grey
-set -g pane-active-border-fg grey
+set -g pane-border-fg white
+set -g pane-active-border-fg white
 set -g pane-active-border-bg default
