--- a/.config/i3/config
+++ b/.config/i3/config
@@ -76,14 +76,16 @@
 	bindsym $mod+v layout toggle split
 	bindsym $mod+t split h
 	bindsym $mod+a focus mode_toggle
+	bindsym $mod+s scratchpad show
+	bindsym $mod+Shift+s move scratchpad
 
 # Resize mode
 	bindsym $mod+n mode "resize"
 	mode "resize" {
-	bindsym h resize shrink width 5 px or 5 ppt
-	bindsym j resize grow height 5 px or 5 ppt
-	bindsym k resize shrink height 5 px or 5 ppt
-	bindsym l resize grow width 5 px or 5 ppt
+	bindsym h resize shrink width 20 px or 5 ppt
+	bindsym j resize grow height 20 px or 5 ppt
+	bindsym k resize shrink height 20 px or 5 ppt
+	bindsym l resize grow width 20 px or 5 ppt
 	bindsym Escape mode "default"
 	}
 
