--- a/.config/i3/config
+++ b/.config/i3/config
@@ -162,5 +162,6 @@
 	exec --no-startup-id xinput set-prop "11" "libinput Tapping Enabled" 1
 	exec --no-startup-id xinput set-prop "11" "libinput Natural Scrolling Enabled" 1
 	exec --no-startupid dropbox
+	exec --no-startupid powah
 	exec --no-startupid xautolock -time 5 -locker '/home/andreas/bin/lock' &
 	exec_always --no-startup-id $HOME/.config/polybar/launch.sh
