--- a/.config/i3/config
+++ b/.config/i3/config
@@ -148,15 +148,20 @@
 
 # Program Workspaces
 	assign [class="Chromium"] $workspace1
+	assign [class="Firefox"] $workspace1
+	assign [class="discord"] $workspace5
 
 # Borders
 	for_window [class="Chromium"] border pixel 0
+	for_window [class="Firefox"] border pixel 0
+	for_window [class="discord"] border pixel 0
 	for_window [class="Nitrogen"] border pixel 0
 
 # Floating
 	for_window [class="Lxappearance"] floating enable
 	for_window [class="Nitrogen"] floating enable
 	for_window [class="feh"] floating enable
+	for_window [class="StylishInstall*"] floating enable
 
 # Autoexec
 	exec --no-startup-id xinput set-prop "11" "libinput Tapping Enabled" 1
@@ -164,4 +169,5 @@
 	exec --no-startupid dropbox
 	exec --no-startupid powah
 	exec --no-startupid xautolock -time 5 -locker '/home/andreas/bin/lock' &
+# exec_always --no-startup-id "i3-msg 'workspace 3; append_layout /home/andreas/.i3/workspace-3.json'"
 	exec_always --no-startup-id $HOME/.config/polybar/launch.sh
