--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -21,4 +21,8 @@ audio_output {
 	type "pulse"
 	name "pulse audio"
 }
-
+# audio_output {
+# 	type "alsa"
+# 	name "My Alsa"
+# 	buffer_time "50000"
+# }
