--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,6 @@ bind -n M-c new-window
 bind -n M-x kill-pane
 
 bind e set -g status 
-# bind E set -g status on
 
 # Bind clock on same key as ncmpcpp
 bind + clock-mode
@@ -75,19 +74,19 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Statusline
 set-option -g status-justify centre
-set-option -g status-style "fg=white"
+set-option -g status-style "fg=colour15"
 set-option -g status-interval 1
 set-option -g status-left-length 256
 set-option -g status-right-length 256
 set-option -g status-left ""
 set-option -g status-right ""
 set-window-option -g window-status-style "fg=default"
-set-window-option -g window-status-current-style "fg=cyan"
-set-window-option -g window-status-bell-style "fg=red"
-set-window-option -g window-status-activity-style "fg=red"
+set-window-option -g window-status-current-style "fg=colour14"
+set-window-option -g window-status-bell-style "fg=colour9"
+set-window-option -g window-status-activity-style "fg=colour9"
 set-window-option -g window-status-format '#{=15:window_name}'
 set-window-option -g window-status-current-format '#W'
 
-set -g pane-border-fg white
-set -g pane-active-border-fg white
+set -g pane-border-fg colour8
+set -g pane-active-border-fg colour8
 set -g pane-active-border-bg default
