--- a/compton.conf
+++ b/compton.conf
@@ -56,7 +56,7 @@ glx-swap-method = "undefined";
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = false;
+shadow = true;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
@@ -64,13 +64,13 @@ no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 12;
+shadow-radius = 25;
 # The left offset for shadows. (default -15)
 shadow-offset-x = -15;
 # The top offset for shadows. (default -15)
 shadow-offset-y = -15;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.7;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
