--- a/polybar/config
+++ b/polybar/config
@@ -78,7 +78,7 @@ font-1 = Ionicons:size=14:Medium:fontformat=truetype;2
 
 modules-left = i3 
 modules-center = 
-modules-right = volume wlan battery date
+modules-right = battery volume wlan date
 
 ; modules = mpd memory cpu temperture xwindow
 
@@ -262,7 +262,7 @@ label-disconnected-foreground = #55
 
 [module/date]
 type = internal/date
-date = %{F#928374} %H:%M
+date = %{F#928374} %H%M
 ; date = %%{F#928374}%%{F#ebdbb2} %H:%M
 date-alt = %%{F#928374}%{F#ebdbb2} %d-%m-%Y %%{F#928374}%%{F#ebdbb2} %H:%M
 interval = 5
@@ -314,12 +314,27 @@ battery = BAT0
 adapter = AC
 full-at = 98
 
-format-charging = <animation-charging> %{F#928374} <label-charging>
+format-charging = %{F#928374} <label-charging>
 format-charging-underline = ${colors.cyan}
-format-discharging = <ramp-capacity> %{F#928374} <label-discharging>
+format-discharging = %{F#928374} <label-discharging>
 format-discharging-underline = ${colors.background}
-format-full = %{F#55}%{F#928374} <label-full>
+format-full = %{F#928374} <label-full>
 format-full-underline = ${self.format-charging-underline}
+
+; format-charging = <animation-charging>
+; format-charging-underline = ${colors.cyan}
+; format-discharging = <ramp-capacity>
+; format-discharging-underline = ${colors.background}
+; format-full = <label-full>
+; format-full-underline = ${self.format-charging-underline}
+
+; format-charging = <animation-charging> %{F#928374} <label-charging>
+; format-charging-underline = ${colors.cyan}
+; format-discharging = <ramp-capacity> %{F#928374} <label-discharging>
+; format-discharging-underline = ${colors.background}
+; format-full = %{F#55}%{F#928374} <label-full>
+; format-full-underline = ${self.format-charging-underline}
+
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
